Ignore some lint check

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,11 @@ android {
         freeCompilerArgs += "-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi"
         freeCompilerArgs += "-Xopt-in=kotlinx.coroutines.FlowPreview"
     }
+
+    lintOptions{
+        disable 'MissingTranslation'
+        disable 'ImpliedQuantity'
+    }
 }
 
 dependencies {
