Integrate screenshots of Firebase Test Lab in instrumentation tests

--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        flatDir {
+            dirs '../aars'
+        }
     }
 }
 
