--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'androidx.navigation.safeargs.kotlin'
+apply plugin: "com.osacky.fladle"
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -66,6 +67,19 @@ android {
         disable 'MissingTranslation'
         disable 'ImpliedQuantity'
     }
+    testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+    }
+}
+
+fladle {
+    serviceAccountCredentials = project.layout.projectDirectory.file("TestLabExample-b587744c8b94.json")
+    // Project Id is not needed if serviceAccountCredentials are set.
+    //projectId = "testlabexample-8c3e5"
+    devices = [
+            [ "model": "Pixel2", "version": "26" ]
+    ]
+    filesToDownload = ['.*/sdcard/.*']
 }
 
 dependencies {
