Integrate Shot which  take screenshots and compare them

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'androidx.navigation.safeargs.kotlin'
 apply plugin: "com.osacky.fladle"
+apply plugin: "shot"
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -69,6 +70,10 @@ android {
     }
     testOptions {
         execution 'ANDROIDX_TEST_ORCHESTRATOR'
+    }
+    packagingOptions {
+        exclude 'META-INF/AL2.0'
+        exclude 'META-INF/LGPL2.1'
     }
 }
 
