--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ buildscript {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
         classpath "com.osacky.flank.gradle:fladle:$fladleVersion"
+        classpath "com.karumi:shot:5.5.0"
     }
 }
 
